--- a/templates/chauffeur/_delete_form.html.twig
+++ b/templates/chauffeur/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_chauffeur_delete', {'id': chauffeur.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_chauffeur_delete', {'id': chauffeur.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ chauffeur.id) }}">
     <button class="btn">Delete</button>
 </form>
