--- a/templates/videnge/base.html.twig
+++ b/templates/videnge/base.html.twig
@@ -52,7 +52,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark fa-scroll-top">
     <div class="container">
-        <a class="navbar-brand" href="#">Gestion de Videnge</a>
+        <a class="navbar-brand" href="#">Gestion de Vidange</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -60,14 +60,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_videnge_index') }}"><i class="fa fa-table"></i> Liste Videnges</a>
+                    <a class="nav-link" href="{{ path('app_videnge_index') }}"><i class="fa fa-table"></i> Liste des vidanges</a>
                 </li>
                  <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_videnge_planifier') }}"><i class="fa fa-plus-circle"></i> Planifier Videnge</a>
-                </li>
-                
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_videnge_index') }}"><i class="fa fa-table"></i> Liste des Planing</a>
+                    <a class="nav-link" href="{{ path('app_videnge_planifier') }}"><i class="fa fa-plus-circle"></i>Planifier une vidange</a>
                 </li>
 
             </ul>
