--- a/templates/videnge/index.html.twig
+++ b/templates/videnge/index.html.twig
@@ -16,7 +16,7 @@
 	<div class="container mt-5">
 		<h1 class="mb-4">
 			<i class="fas fa-list"></i>
-			Liste des Vidange</h1>
+			Liste des Vidanges</h1>
 
 		<form method="get" action="{{ path('app_videnge_index') }}" class="mb-4">
 			<div class="input-group">
