--- a/templates/graissage/base.html.twig
+++ b/templates/graissage/base.html.twig
@@ -14,7 +14,7 @@
             padding-top: 70px;
         }
         .container {
-            max-width: 800px;
+            max-width: auto;
             margin: auto;
             background: white;
             padding: 20px;
